--- a/panier.html
+++ b/panier.html
@@ -10,7 +10,8 @@
 
 <body>
     <div class="cart-content">
-        <h2>Votre Panier</h2>
+        <h2>Terres de Café</h2>
+        <a href="shop.html" id="link">retour aux produits</a>
         <table class="cart-table">
             <thead>
                 <tr>
@@ -26,10 +27,7 @@
         </table>
 
         <div class="cart-summary">
-            <p id="total-amount">Montant total : 0.00 DH</p>
-            <a href="paiment.html">
-                <button id="checkout-btn" class="checkout-btn">Passer à la caisse</button>
-            </a>
+            <p id="total-amount">Total : 0.00 DH</p>
         </div>
     </div>
 
